Add Mockito to test Instant.now static function